<resources>
    <string name="app_name">LoginWithAnimation</string>
    <string name="signup">Register</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Cerita-cerita Panjang yang Menceritakan tentang Keberhasilan Orang-orang Luar Biasa dan Bagaimana Anda Dapat Mengambil Pelajaran dari Mereka.</string>
    <string name="title_welcome_page">Dicoding Bercerita!</string>
    <string name="title_signup_page">Buat akun Anda sekarang dan nikmati cerita-cerita luar biasa dari penulis kami.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Selamat datang kembali! Silakan masuk untuk melanjutkan petualangan cerita Anda.</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="error_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="name_required">Nama harus diisi!</string>
    <string name="email_required">Email tidak boleh kosong!</string>
    <string name="password_required">Password tidak boleh kosong</string>
    <string name="dicoding">Dicoding</string>
    <string name="description">description</string>
    <string name="icon">Icon</string>
    <string name="title">Title</string>
    <string name="teks_menu">Dicoding</string>
    <string name="btnmenu">btnMenu</string>
    <string name="kamera">Camera</string>
    <string name="galeri">Gallery</string>
    <string name="unggah">upload</string>
    <string name="empty_image_warning">Anda belum mengunggah Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btnmap">tombol map</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="image">image</string>


</resources>
